# C-Net

./: .biomeignore  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  bfida_2min_backup_20260616-071904.csv  biome.json  bunfig.toml  commitlint.config.js  docker-compose.yml  drizzle.config.ts  package.json  playground.ts  sonar-project.properties  tailwind.config.ts  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
app/: globals.css  layout.tsx  robots.ts  sitemap.ts
apps/neural-bridge/: .env.example  README.md  _diag_connect.py  _diag_pair.py  _diag_winrt_pair.py  pyproject.toml
apps/neural-bridge/cnet_neural_bridge.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
apps/neural-bridge/neural_bridge/: __init__.py  __main__.py  bandpower.py  decoders.py  muse_protocol.py  publisher.py
components/: AuthModal.tsx  ContactEmailTemplate.tsx  LogoLoop.tsx  MetricsCard.tsx  StyleDebugger.tsx  VMCard.tsx  VMList.tsx
deploy/: .env.production.example  Caddyfile  compose.data.yml
docs/: HANDOVER-tank-storage-proxmox.md  PROXMOX_SETUP.md  RUNBOOK-proxmox-deploy.md  ZFS_BAY_GUI_PLAN.md
lib/: audit.ts  auth.config.ts  auth.ts  authorization.ts  encryption.ts  logger.ts  proxmox-test.ts  proxy.ts  queues.ts  redis.ts  resend.ts  service-test.ts  utils.ts
scripts/: bd-fake-publisher.ts  db.ts  deploy.sh  pin-deps.ts  sonar-scan-if-configured.ts  tank.ts  vault-backfill-thumbs.ts
src/: auth.config.ts  proxy.ts
stories/: Header.tsx  Page.tsx  index.ts
(+348 files in other folders)
